@@ -77,6 +77,10 @@ NETWORK_SPECTATOR_TIME  0    # if > 0, this is the maximal time in seconds a cli
 ALLOW_ENEMIES_SAME_IP     0  # if set to 1, this allows two players that apparently come from the same machine to fight for points with each other
 ALLOW_ENEMIES_SAME_CLIENT 0  # if set to 1, this allows two players that play on the same client to fight for points with each other
 
+# If ALLOW_ENEMIES_SAME_IP is set to 0, you can allow players from the same IP to be enemies by whitelisting their authenticated names or IP:
+# WHITELIST_ENEMIES_USERNAME player1@ player2@
+# WHITELIST_ENEMIES_IP 127.0.0.1
+
 ALLOW_CONTROL_DURING_CHAT 0  # if set to 1, this allows a player to issue cycle and camera control commands during chat (losing the chatbot and the yellow chat pyramid). This feature was buggy and has been disabled for 0.2.8.0.
 
 ALLOW_IMPOSTERS 0            # allow two players to have the same name
